<resources>
    <string name="button_ok">OK</string>

    <string name="seal_title">Directory &amp; File</string>

    <string name="seal_device_root">Root</string>
    <string name="seal_device_phone">Phone</string>
    <string name="seal_device_sdcard">SDCard</string>
    <string name="seal_device_otg">OTG</string>

    <string name="seal_device_unavailable">Unavailable</string>
    <string name="seal_device_unmounted">Unmounted</string>
    <string name="seal_device_details">Free: %1$s Total: %2$s</string>
    <string name="seal_device_prohibit">%1$s is unavailable</string>
    <string name="seal_device_root_details">Limited root access</string>

    <plurals name="file_title_for_file">
        <item quantity="one">Choose File</item>
        <item quantity="other">Choose Files</item>
    </plurals>

    <plurals name="file_title_for_directory">
        <item quantity="one">Choose Directory</item>
        <item quantity="other">Choose Directories</item>
    </plurals>

    <string name="file_button_cancel">Cancel</string>
    <string name="file_button_choose">Choose</string>

    <string name="file_fetching">Loading Contents…</string>

    <plurals name="item_directory_detail">
        <item quantity="one">1 item | %2$tD %2$tR</item>
        <item quantity="other">%1$d items | %2$tD %2$tR</item>
    </plurals>
    <string name="item_file_size_suffix">b</string>
    <string name="item_file_detail">%1$s | %2$tD %2$tR</string>

    <string name="file_no_content">No Content</string>
    <plurals name="file_selection_detail">
        <item quantity="one">1 Item</item>
        <item quantity="other">%1$d Items</item>
    </plurals>

    <string name="file_menu_sort_type">Sort By</string>
    <string name="file_action_sort_by_name">Name</string>
    <string name="file_action_sort_by_type">Extension</string>
    <string name="file_action_sort_by_size_asc">Size (smaller first)</string>
    <string name="file_action_sort_by_size_desc">Size (bigger first)</string>
    <string name="file_action_sort_by_date_asc">Date (newer first)</string>
    <string name="file_action_sort_by_date_desc">Date (older first)</string>
    <string name="file_action_show_hidden">Show Hidden Items</string>
    <string name="file_action_home">Home</string>
</resources>
