<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:title="@string/file_action_home"
        app:showAsAction="ifRoom" />
    <item
        android:title="@string/file_menu_sort_type"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_sort_by_size">
        <menu>
            <item
                android:id="@+id/action_by_name"
                android:title="@string/file_action_sort_by_name" />
            <item
                android:id="@+id/action_by_type"
                android:title="@string/file_action_sort_by_type" />
            <item
                android:id="@+id/action_by_size_asc"
                android:title="@string/file_action_sort_by_size_asc" />
            <item
                android:id="@+id/action_by_size_desc"
                android:title="@string/file_action_sort_by_size_desc" />
            <item
                android:id="@+id/action_by_date_asc"
                android:title="@string/file_action_sort_by_date_asc" />
            <item
                android:id="@+id/action_by_date_desc"
                android:title="@string/file_action_sort_by_date_desc" />
        </menu>
    </item>
    <item
        android:id="@+id/action_show_hidden"
        android:checkable="true"
        android:title="@string/file_action_show_hidden" />
</menu>
